--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
   "author": "Eroll Maxhuni",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode development",
-    "start": "node ./bin/www",
-    "watch": "npm run build -- --watch & nodemon npm start"
+    "prebuild": "npm run build:clean",
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build:clean": "rimraf ./build",
+    "start": "cross-env NODE_ENV=development node server",
+    "start:production": "npm run test && npm run build && npm run start:prod",
+    "start:prod": "cross-env NODE_ENV=production node server",
+    "clean": "npm run test:clean && npm run build:clean",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore",
+    "eslint:fix": "eslint -- . --ignore-path .gitignore --fix",
+    "lint:js": "npm run lint:eslint -- . ",
+    "pretest": "npm run test:clean && npm run lint",
+    "test:clean": "rimraf ./coverage",
+    "test": "cross-env NODE_ENV=test jest --coverage",
+    "test:watch": "cross-env NODE_ENV=test jest --watchAll"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
@@ -112,6 +124,8 @@
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
+    "webpack-hot-middleware": "^2.22.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "6.24.1"
   }
 }
